--- a/SolvrSolution/SolvrDesktopClient/Properties/Resources.resx
+++ b/SolvrSolution/SolvrDesktopClient/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="profile_placeholder" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\profile_placeholder.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
